--- a/scripts/translate/requirements.txt
+++ b/scripts/translate/requirements.txt
@@ -1,5 +1,3 @@
-openai==0.27.0
-boto3>=1.18.0,<2.0.0
 aiohttp>=3.8.4,<4.0.0
 multidict>=6.0.4,<7.0.0
 attrs>=23.1.0,<24.0.0
@@ -17,3 +15,5 @@ python-dateutil>=2.8.2,<3.0.0
 six>=1.16.0,<2.0.0
 requests>=2.20,<3.0.0
 tqdm>=4.64.0,<5.0.0
+tiktoken
+anthropic
